# OnlineStore

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  backup_after_price_fix_2026-02-11_21-48.sql  backup_before_price_fix_2026-02-11_21-40.sql  backup_schema_dump.sql  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  nginx.conf  pyproject.toml  remote_backup_2026-02-14.sql  setup.cfg
backend/: conftest.py  manage.py  pytest.ini
backend/apps/: db_utils.py  utils.py
backend/apps/accessories/: admin.py  models.py  resources.py  search_indexes.py  serializers.py  urls.py  views.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/basket/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/billing_details/: admin.py  apps.py  models.py
backend/apps/check_deployment/: admin.py  apps.py  db_utils.py  models.py  resources.py  urls.py  views.py
backend/apps/customer/: admin.py  apps.py  models.py
backend/apps/database_products/: admin.py  models.py  resources.py  serializers.py  views.py
backend/apps/discount_codes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/favorites/: models.py  serializers.py  urls.py  views.py
backend/apps/initial/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/oauth_google/: apps.py  serializers.py  urls.py  views.py
backend/apps/order/: admin.py  models.py
backend/apps/orders/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/product/: admin.py  apps.py  models.py  resources.py  serializers.py  urls.py  views.py
backend/apps/products/: admin.py  apps.py  filters.py  managers.py  models.py  resources.py  serializers.py  urls.py  views.py
backend/apps/review/: apps.py  models.py
backend/apps/reviews/: models.py  serializers.py  urls.py  views.py
backend/apps/search/: accessory_search_indexes.py  products_search_indexes.py  search_indexes.py  serializers.py  urls.py  views.py
backend/apps/subscription/: admin.py  apps.py  (+3 more)
backend/configs/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: middleware.py  pagination.py  views.py
backend/templates/: base.html  inform_order_status.html  order_created.html  order_status.html  password_changed.html  recovery.html  registration_greeting.html  subscribed_for_newsletters.html  update_info.html
client/: asset-manifest.json  index.html
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
(+199 files in other folders)
