[tool.poetry]
name = "onlinestore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.2.9"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
pillow = "^11.3.0"
django-cors-headers = "^4.7.0"
drf-yasg = "^1.21.10"
cloudinary = "^1.44.1"
django-cloudinary-storage = "^0.3.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
